[project]
name = "schemarecomb"
description = "Design recombinant protein libraries for Golden Gate Assembly."
authors = [
  {name = "Bennett Bremer", email = "bennettjamesbremer@gmail.com"},
]
dynamic = ["version"]
requires-python = ">3.10"
dependencies = [
  "biopython == 1.85",
  "scipy == 1.15.3",
]

[project.optional-dependencies]
dev = [
  "flake8 == 3.9.2",
  "mypy == 0.910",
  "pytest == 6.2.4",
  "pytest-mock == 3.6.1",
  "sphinx == 4.0.1",
  "sphinx-autodoc-typehints == 1.12.0",
]

[project.urls]
download = "https://pypi.org/project/schemarecomb"
source = "https://github.com/RomeroLab/schemarecomb"
documentation = "https://schemarecomb.readthedocs.io/en/latest"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "ELLIPSIS"
testpaths = [
  "tests/unit/",
  "src/schemarecomb/libraries.py",
  "src/schemarecomb/pdb_structure.py",
  "src/schemarecomb/parent_alignment.py",
  "README.rst"
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
